src/objects/HWS_Quotation_Exclusion_Mapping__mdt.object
<CustomObject>
    <description>HWSDDP-27</description>
    <fields>
        <fullName>HWS_Category__c</fullName>
        <description>HWSDDP-27</description>
        <label>Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Order_Code__c</fullName>
        <label>Order Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Price_Type_Description__c</fullName>
        <description>HWSDDP-27</description>
        <label>Price Type Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Price_Type__c</fullName>
        <description>HWSDDP-27</description>
        <label>Price Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Reason_Category__c</fullName>
        <description>HWSDDP-27</description>
        <label>Reason Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Repairable__c</fullName>
        <description>HWSDDP-27</description>
        <label>Repairable</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HWS_SRM_Discount_Type__c</fullName>
        <label>SRM Discount Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_SRM_Price_Type__c</fullName>
        <label>SRM Price Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_eSpares_Part_Number__c</fullName>
        <description>HWSDDP-27</description>
        <label>eSpares Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HWS Quotation Exclusion Mapping</label>
    <pluralLabel>HWS Quotation Exclusion Mapping</pluralLabel>
</CustomObject>